[package]
name = "bruteforce"
description = "A WIP rust bruteforce library"
version = "0.1.2"
authors = ["Robin Lindner <robin@deeprobin.de>"]
edition = "2018"
license = "MIT"
homepage = "https://deeprobin.de/?reference=bruteforce"
documentation = "https://docs.rs/bruteforce/"
repository = "https://github.com/DeepRobin/bruteforce-rs.git"
keywords = [
    "security",
    "iterator",
    "password",
    "algorithm",
    "no_std",
    "library",
]

[dependencies]
no-std-compat = { version = "0.2.0", features = [ "alloc" ] }

[features]
default = [ "std", "constants" ]
constants = []
std = [ "no-std-compat/std" ]
