[package]
name = "bruteforce-macros"
edition = "2018"
version = "0.1.7"
authors = ["Robin Lindner <robin@deeprobin.de>"]
license = "MIT"
homepage = "https://deeprobin.de/?reference=bruteforce"
documentation = "https://docs.rs/bruteforce/"
repository = "https://github.com/DeepRobin/bruteforce-rs.git"
description = """
bruteforce's proc macros.
"""
keywords = [
    "security",
    "iterator",
    "password",
    "algorithm",
    "no_std",
]

[lib]
proc-macro = true

[features]
default = [ "std" ]
std = [ "no-std-compat/std", "no-std-compat/unstable" ]

[dependencies]
no-std-compat = { version = "0.3.0", features = [ "alloc" ] }

[package.metadata.docs.rs]
all-features = true