[package]
name = "bruteforce-macros"
edition = "2021"
version = "0.2.1"
authors = ["Robin Lindner <robin@deeprobin.de>"]
license = "MIT"
homepage = "https://deeprobin.de/?reference=bruteforce"
documentation = "https://docs.rs/bruteforce/"
repository = "https://github.com/DeepRobin/bruteforce-rs.git"
description = "Macro repository for bruteforce-rs"
keywords = [
    "security",
    "iterator",
    "password",
    "algorithm",
    "no_std",
]

[lib]
proc-macro = true

[features]
default = [ "std" ]
std = [ "no-std-compat/std", "no-std-compat/unstable" ]

[dependencies]
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
quote = "1.0.21"

[package.metadata.docs.rs]
all-features = true