[package]
name = "bruteforce"
description = "This is a no_std-compatible brute force/string generation rust-nightly library"
version = "0.2.1"
authors = ["Robin Lindner <robin@deeprobin.de>"]
edition = "2021"
license = "MIT"
homepage = "https://deeprobin.de/?reference=bruteforce"
documentation = "https://docs.rs/bruteforce/"
repository = "https://github.com/DeepRobin/bruteforce-rs.git"
readme = "../README.md"
keywords = [
    "security",
    "iterator",
    "password",
    "algorithm",
    "no_std",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
no-std-compat = { version = "0.4.1", features = [ "alloc" ] }
bruteforce-macros = { version = "0.2.1", path = "../bruteforce-macros", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
default = [ "std", "constants", "bruteforce-macros" ]
constants = []
std = [ "no-std-compat/std", "no-std-compat/unstable" ]
generators = []

[[bench]]
name = "basic"
harness = false